--- a/01-avito-downloader.ipynb
+++ b/01-avito-downloader.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bcea4d8b",
    "metadata": {
     "ExecuteTime": {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "caabc8c7",
    "metadata": {
     "ExecuteTime": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d437eab9",
    "metadata": {},
    "outputs": [],
@@ -89,29 +89,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31463a1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-09-05_14-02'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ts = dt.now().strftime('%Y-%m-%d_%H-%M')\n",
     "ts"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7db09047",
-   "metadata": {},
-   "source": [
-    "## качаем и парсим все объявления в разделе avito_path"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bcd426ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2022-09-05 14:02:31 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-05 14:02:31 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-05 14:02:33 | AvitoDownloader: downloader init\n",
+      "[INFO    ] 2022-09-05 14:02:38 | 79 pages for read\n",
+      "[INFO    ] 2022-09-05 14:02:38 | AvitoDownloader: start read and parse pages...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "572b118be02a4f8aa6745201bc46576c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/78 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2022-09-05 14:08:20 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3922\n",
+      "CPU times: user 18.2 s, sys: 616 ms, total: 18.8 s\n",
+      "Wall time: 5min 50s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avito_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>price</th>\n",
+       "      <th>obj_name</th>\n",
+       "      <th>adr</th>\n",
+       "      <th>description</th>\n",
+       "      <th>avito_page</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>2505832188</td>\n",
+       "      <td>Объявление «1-к. квартира, 31 м², 6/9 эт.» 3 фотографии</td>\n",
+       "      <td>5425000</td>\n",
+       "      <td>ЖК «Доброгород»</td>\n",
+       "      <td>ул. Токарева, 7 этап, блок-секция 1</td>\n",
+       "      <td>Крупнейший в Севастополе семейный микрорайон «Доброгород»! \\n\\nПобедитель всероссийской премии «Топ ЖК 2021» в номинации «Лучший жилой комплекс». \\n\\nИпотека с господдержкой, рассрочка от Застройщика. \\n\\n«Доброгород» по праву считается лучшим жилым кварталом Се</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>804</th>\n",
+       "      <td>2505534513</td>\n",
+       "      <td>Объявление «3-к. квартира, 90 м², 1/9 эт.» 3 фотографии</td>\n",
+       "      <td>12150000</td>\n",
+       "      <td>ЖК «Доброгород»</td>\n",
+       "      <td>ул. Токарева, 7 этап, блок-секция 1</td>\n",
+       "      <td>Крупнейший в Севастополе семейный микрорайон «Доброгород»! \\n\\nПобедитель всероссийской премии «Топ ЖК 2021» в номинации «Лучший жилой комплекс». \\n\\nИпотека с господдержкой, рассрочка от Застройщика. \\n\\n«Доброгород» по праву считается лучшим жилым кварталом Се</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       avito_id                                                    title  \\\n",
+       "716  2505832188  Объявление «1-к. квартира, 31 м², 6/9 эт.» 3 фотографии   \n",
+       "804  2505534513  Объявление «3-к. квартира, 90 м², 1/9 эт.» 3 фотографии   \n",
+       "\n",
+       "        price         obj_name                                  adr  \\\n",
+       "716   5425000  ЖК «Доброгород»  ул. Токарева, 7 этап, блок-секция 1   \n",
+       "804  12150000  ЖК «Доброгород»  ул. Токарева, 7 этап, блок-секция 1   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                description  \\\n",
+       "716  Крупнейший в Севастополе семейный микрорайон «Доброгород»! \\n\\nПобедитель всероссийской премии «Топ ЖК 2021» в номинации «Лучший жилой комплекс». \\n\\nИпотека с господдержкой, рассрочка от Застройщика. \\n\\n«Доброгород» по праву считается лучшим жилым кварталом Се   \n",
+       "804  Крупнейший в Севастополе семейный микрорайон «Доброгород»! \\n\\nПобедитель всероссийской премии «Топ ЖК 2021» в номинации «Лучший жилой комплекс». \\n\\nИпотека с господдержкой, рассрочка от Застройщика. \\n\\n«Доброгород» по праву считается лучшим жилым кварталом Се   \n",
+       "\n",
+       "     avito_page  \n",
+       "716          15  \n",
+       "804          17  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time \n",
     "\n",
@@ -120,13 +236,21 @@
     "\n",
     "df, html = AvitoDownloaderRealty(\n",
     "        driver=DownloaderSeleniumFirefox(profile_path)\n",
-    "    ).load(avito_path)\n",
+    "    ).load(avito_path, show_pbar=True)\n",
     "\n",
     "\n",
-    "df.to_excel(f'data/avito_{ts}_raw.xlsx',index=False)\n",
+    "df.to_excel(f'data/raw/avito_{ts}_raw.xlsx',index=False)\n",
     "\n",
     "print(len(df))\n",
     "df.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a302c95f",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -142,9 +266,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9d1e4881",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a0c48be",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## дополнительная очистка данных"
    ]
@@ -165,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f2b39126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib.avito import AvitoDataCleanerRealty\n",
+    "# from lib.avito import AvitoDataCleanerRealty\n",
     "\n",
-    "df_ = AvitoDataCleanerRealty.transform(df)\n",
-    "df_.to_excel(f'data/avito_{ts}.xlsx',index=False)\n",
-    "df_.sample(2)"
+    "# df_ = AvitoDataCleanerRealty.transform(df)\n",
+    "# df_.to_excel(f'data/avito_{ts}.xlsx',index=False)\n",
+    "# df_.sample(2)"
    ]
   },
   {
@@ -187,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eff136d0",
    "metadata": {},
    "outputs": [],
