--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ac5760d8",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "3e42986b",
    "metadata": {},
    "outputs": [
@@ -193,15 +193,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-07 11:14:53 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-07 11:14:53 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-07 11:14:56 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-07 11:14:56 | CianParser: downloader init\n",
-      "[INFO    ] 2022-09-07 11:14:56 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-07 11:14:59 | AdsListParser: read page 1\n",
-      "[WARNING ] 2022-09-07 11:14:59 | CianParser: parse pagination error: list index out of range\n",
-      "[INFO    ] 2022-09-07 11:14:59 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-07 11:14:59 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "[INFO    ] 2022-09-07 13:21:24 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-07 13:21:24 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-07 13:21:26 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-07 13:21:26 | CianParser: downloader init\n",
+      "[INFO    ] 2022-09-07 13:21:26 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-07 13:21:29 | AdsListParser: read page 1\n",
+      "[WARNING ] 2022-09-07 13:21:29 | CianParser: parse pagination error: list index out of range\n",
+      "[INFO    ] 2022-09-07 13:21:29 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-07 13:21:29 | DownloaderSeleniumFirefox: close virtual browser\n",
       "0\n"
      ]
     }
@@ -219,22 +219,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "db0e1b18",
+   "execution_count": 11,
+   "id": "724a9b7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from lib.downloader import DownloaderSimple\n",
-    "\n",
-    "# df,html = CianParser(driver=DownloaderSimple()).load(req_param, keep_html=True, page_limit=3)\n",
-    "\n",
-    "# # html = DownloaderSimple().get(url)\n",
-    "# with open('tmp/cian.html','wt') as f: f.write(html)"
+    "# html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "dc01b27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from lib.downloader import DownloaderSimple\n",
+    "# df,html = CianParser(driver=DownloaderSimple()).load(req_param, keep_html=True, page_limit=3)\n",
+    "# # html = DownloaderSimple().get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db0e1b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('tmp/cian.html','wt') as f: f.write(html[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ce966c4c",
    "metadata": {},
    "outputs": [],
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e9cce38c",
    "metadata": {},
    "outputs": [],
@@ -262,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4201760b",
    "metadata": {},
    "outputs": [],
@@ -322,30 +339,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_link(tag):\n",
-    "    return tag.find('a').attrs['href']\n",
+    "# def get_link(tag):\n",
+    "#     return tag.find('a').attrs['href']\n",
     "\n",
-    "def get_ts(tag):\n",
-    "    return [ t.text for t in tag.find_all('span') ]\n",
+    "# def get_ts(tag):\n",
+    "#     return [ t.text for t in tag.find_all('span') ]\n",
     "\n",
-    "def get_adr(tag):\n",
-    "    return [ t.text for t in tag.find_all('a',{'data-name':'GeoLabel',}) ]\n",
+    "# def get_adr(tag):\n",
+    "#     return [ t.text for t in tag.find_all('a',{'data-name':'GeoLabel',}) ]\n",
     "\n",
-    "def parse_item(tag):\n",
-    "    return {\n",
-    "    'OfferTitle':tag.find('span',{'data-mark':'OfferTitle',}).text,\n",
+    "# def parse_item(tag):\n",
+    "#     return {\n",
+    "#     'OfferTitle':tag.find('span',{'data-mark':'OfferTitle',}).text,\n",
     "    \n",
-    "    #'OfferSubtitle': tag.find('span',{'data-mark':'OfferSubtitle',}).text,\n",
-    "    # 'Deadline': tag.find('span',{'data-mark':'Deadline',}).text,\n",
+    "#     #'OfferSubtitle': tag.find('span',{'data-mark':'OfferSubtitle',}).text,\n",
+    "#     # 'Deadline': tag.find('span',{'data-mark':'Deadline',}).text,\n",
     "    \n",
-    "    'GeoLabel':  get_adr(tag),  # tag.find('span',{'data-name':'GeoLabel',}).text,\n",
+    "#     'GeoLabel':  get_adr(tag),  # tag.find('span',{'data-name':'GeoLabel',}).text,\n",
     "        \n",
-    "    'MainPrice': tag.find('span',{'data-mark':'MainPrice',}).text,\n",
-    "    'PriceInfo': tag.find('p',{'data-mark':'PriceInfo',}).text,\n",
-    "    'Description': tag.find('div',{'data-name':'Description',}).text,\n",
-    "    'LinkArea': get_link( tag.find('div',{'data-name':'LinkArea',})), \n",
-    "    'TimeLabel': get_ts( tag.find('div',{'data-name':'TimeLabel',})),  \n",
-    "    }\n",
+    "#     'MainPrice': tag.find('span',{'data-mark':'MainPrice',}).text,\n",
+    "#     'PriceInfo': tag.find('p',{'data-mark':'PriceInfo',}).text,\n",
+    "#     'Description': tag.find('div',{'data-name':'Description',}).text,\n",
+    "#     'LinkArea': get_link( tag.find('div',{'data-name':'LinkArea',})), \n",
+    "#     'TimeLabel': get_ts( tag.find('div',{'data-name':'TimeLabel',})),  \n",
+    "#     }\n",
     "    \n",
     "    "
    ]
@@ -357,11 +374,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = BeautifulSoup(html,'html.parser')\n",
-    "text = [\n",
-    "    parse_item(tag)\n",
-    "    for tag in root.find_all('article',{'data-name':'CardComponent',}) \n",
-    "]\n"
+    "# root = BeautifulSoup(html,'html.parser')\n",
+    "# text = [\n",
+    "#     parse_item(tag)\n",
+    "#     for tag in root.find_all('article',{'data-name':'CardComponent',}) \n",
+    "# ]\n"
    ]
   },
   {
