--- a/01-avito-downloader.ipynb
+++ b/01-avito-downloader.ipynb
@@ -256,6 +256,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f8bd78d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))\n",
+    "df = df.dropna().reset_index(drop=True)\n",
+    "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "6fa322a2",
    "metadata": {},
