--- a/06-data-join.ipynb
+++ b/06-data-join.ipynb
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "from lib.avito import AvitoDataCleanerRealty\n",
+    "from lib.avito import AvitoDataCleanerRealtyFlat\n",
     "\n",
     "data_avito = pd.concat([\n",
     "        pd\n",
@@ -172,7 +172,7 @@
     "        for f in raw_data_files\n",
     "    ]).reset_index(drop=True)\n",
     "\n",
-    "data_avito = AvitoDataCleanerRealty().transform( data_avito )\n",
+    "data_avito = AvitoDataCleanerRealtyFlat().transform( data_avito )\n",
     "\n",
     "print(len(data_avito))"
    ]
