--- a/06b-data-join-land.ipynb
+++ b/06b-data-join-land.ipynb
@@ -82,11 +82,11 @@
    "outputs": [],
    "source": [
     "# каталог с файлами объявлений\n",
-    "avito_raw_data_path = 'data/raw/avito' \n",
+    "avito_raw_data_path = 'data/raw/land/avito' \n",
     "# cian_raw_data_path = 'data/raw/cian'\n",
     "\n",
     "loc_file_path = 'data/location.pkl' # таблица адресов\n",
-    "result_file_path = 'data/data.pkl'"
+    "result_file_path = 'data/data_land.pkl'"
    ]
   },
   {
