--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -82,11 +82,11 @@
    "outputs": [],
    "source": [
     "# каталог с файлами объявлений\n",
-    "avito_raw_data_path = 'data/raw/avito' \n",
-    "cian_raw_data_path = 'data/raw/cian'\n",
+    "avito_raw_data_path = 'data/raw/flat/avito' \n",
+    "cian_raw_data_path = 'data/raw/flat/cian'\n",
     "\n",
     "loc_file_path = 'data/location.pkl' # таблица адресов\n",
-    "result_file_path = 'data/data.pkl'"
+    "result_file_path = 'data/data_flat.pkl'"
    ]
   },
   {
