--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -117,15 +117,16 @@
     {
      "data": {
       "text/plain": [
-       "['data/raw/avito/avito_2022-08-26_17-29_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-08-29_13-16_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-08-31_17-42_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-01_14-07_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-02_13-04_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-05_14-02_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-06_13-09_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-07_12-39_raw.xlsx',\n",
-       " 'data/raw/avito/avito_2022-09-08_13-36_raw.xlsx']"
+       "['data/raw/flat/avito/avito_2022-08-26_17-29_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-08-29_13-16_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-08-31_17-42_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-01_14-07_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-02_13-04_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-05_14-02_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-06_13-09_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-07_12-39_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-08_13-36_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-12_13-44_raw.xlsx']"
       ]
      },
      "execution_count": 6,
@@ -155,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16992\n"
+      "17454\n"
      ]
     }
    ],
@@ -198,33 +199,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16992 entries, 0 to 16991\n",
+      "RangeIndex: 17454 entries, 0 to 17453\n",
       "Data columns (total 21 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   avito_id       16992 non-null  int64         \n",
-      " 1   title          16992 non-null  object        \n",
-      " 2   price          16992 non-null  int64         \n",
-      " 3   adr            16992 non-null  object        \n",
-      " 4   description    16992 non-null  object        \n",
-      " 5   obj_name       16992 non-null  object        \n",
-      " 6   ts             16992 non-null  datetime64[ns]\n",
-      " 7   avito_page     16992 non-null  int64         \n",
-      " 8   nrooms         16992 non-null  int64         \n",
-      " 9   floor          16992 non-null  int64         \n",
-      " 10  nfloors        16992 non-null  int64         \n",
-      " 11  area           16992 non-null  float64       \n",
-      " 12  is_studio      16992 non-null  bool          \n",
-      " 13  is_apartment   16992 non-null  bool          \n",
-      " 14  is_part        16992 non-null  bool          \n",
-      " 15  is_auction     16992 non-null  bool          \n",
-      " 16  is_openspace   16992 non-null  bool          \n",
-      " 17  is_roof        16992 non-null  bool          \n",
-      " 18  is_SNT         16992 non-null  bool          \n",
-      " 19  priceM         16992 non-null  float64       \n",
-      " 20  is_last_floor  16992 non-null  bool          \n",
+      " 0   avito_id       17454 non-null  int64         \n",
+      " 1   title          17454 non-null  object        \n",
+      " 2   price          17454 non-null  int64         \n",
+      " 3   adr            17454 non-null  object        \n",
+      " 4   description    17454 non-null  object        \n",
+      " 5   obj_name       17454 non-null  object        \n",
+      " 6   ts             17454 non-null  datetime64[ns]\n",
+      " 7   avito_page     17454 non-null  int64         \n",
+      " 8   nrooms         17454 non-null  int64         \n",
+      " 9   floor          17454 non-null  int64         \n",
+      " 10  nfloors        17454 non-null  int64         \n",
+      " 11  area           17454 non-null  float64       \n",
+      " 12  is_studio      17454 non-null  bool          \n",
+      " 13  is_apartment   17454 non-null  bool          \n",
+      " 14  is_part        17454 non-null  bool          \n",
+      " 15  is_auction     17454 non-null  bool          \n",
+      " 16  is_openspace   17454 non-null  bool          \n",
+      " 17  is_roof        17454 non-null  bool          \n",
+      " 18  is_SNT         17454 non-null  bool          \n",
+      " 19  priceM         17454 non-null  float64       \n",
+      " 20  is_last_floor  17454 non-null  bool          \n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(6), object(4)\n",
-      "memory usage: 1.8+ MB\n"
+      "memory usage: 1.9+ MB\n"
      ]
     }
    ],
@@ -260,7 +261,8 @@
     {
      "data": {
       "text/plain": [
-       "['data/raw/cian/cian_2022-09-08_14-25_raw.pkl']"
+       "['data/raw/flat/cian/cian_2022-09-08_14-25_raw.pkl',\n",
+       " 'data/raw/flat/cian/cian_2022-09-12_13-59_raw.pkl']"
       ]
      },
      "execution_count": 11,
@@ -311,23 +313,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1503 entries, 0 to 1502\n",
+      "RangeIndex: 3009 entries, 0 to 3008\n",
       "Data columns (total 11 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   OfferTitle     1503 non-null   object        \n",
-      " 1   OfferSubtitle  1503 non-null   object        \n",
-      " 2   Deadline       1503 non-null   object        \n",
-      " 3   MainPrice      1503 non-null   object        \n",
-      " 4   PriceInfo      1503 non-null   object        \n",
-      " 5   GeoLabel       1503 non-null   object        \n",
-      " 6   TimeLabel      1503 non-null   object        \n",
-      " 7   LinkArea       1503 non-null   object        \n",
-      " 8   Description    1503 non-null   object        \n",
-      " 9   cian_page      1503 non-null   int64         \n",
-      " 10  ts             1503 non-null   datetime64[ns]\n",
+      " 0   OfferTitle     3009 non-null   object        \n",
+      " 1   OfferSubtitle  3009 non-null   object        \n",
+      " 2   Deadline       3009 non-null   object        \n",
+      " 3   MainPrice      3009 non-null   object        \n",
+      " 4   PriceInfo      3009 non-null   object        \n",
+      " 5   GeoLabel       3009 non-null   object        \n",
+      " 6   TimeLabel      3009 non-null   object        \n",
+      " 7   LinkArea       3009 non-null   object        \n",
+      " 8   Description    3009 non-null   object        \n",
+      " 9   cian_page      3009 non-null   int64         \n",
+      " 10  ts             3009 non-null   datetime64[ns]\n",
       "dtypes: datetime64[ns](1), int64(1), object(9)\n",
-      "memory usage: 129.3+ KB\n"
+      "memory usage: 258.7+ KB\n"
      ]
     }
    ],
@@ -371,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1503\n"
+      "3009\n"
      ]
     }
    ],
@@ -404,33 +406,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1503 entries, 0 to 1502\n",
+      "RangeIndex: 3009 entries, 0 to 3008\n",
       "Data columns (total 21 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   title          1503 non-null   object        \n",
-      " 1   obj_name       1503 non-null   object        \n",
-      " 2   adr            1503 non-null   object        \n",
-      " 3   nrooms         1503 non-null   int64         \n",
-      " 4   floor          1503 non-null   int64         \n",
-      " 5   nfloors        1503 non-null   int64         \n",
-      " 6   area           1503 non-null   float64       \n",
-      " 7   is_studio      1503 non-null   bool          \n",
-      " 8   is_apartment   1503 non-null   bool          \n",
-      " 9   is_part        1503 non-null   bool          \n",
-      " 10  is_auction     1503 non-null   bool          \n",
-      " 11  is_openspace   1503 non-null   bool          \n",
-      " 12  is_roof        1503 non-null   bool          \n",
-      " 13  is_SNT         1503 non-null   bool          \n",
-      " 14  price          1503 non-null   int64         \n",
-      " 15  priceM         1503 non-null   float64       \n",
-      " 16  is_last_floor  1503 non-null   bool          \n",
-      " 17  cian_url       1503 non-null   object        \n",
-      " 18  description    1503 non-null   object        \n",
-      " 19  cian_page      1503 non-null   int64         \n",
-      " 20  ts             1503 non-null   datetime64[ns]\n",
+      " 0   title          3009 non-null   object        \n",
+      " 1   obj_name       3009 non-null   object        \n",
+      " 2   adr            3009 non-null   object        \n",
+      " 3   nrooms         3009 non-null   int64         \n",
+      " 4   floor          3009 non-null   int64         \n",
+      " 5   nfloors        3009 non-null   int64         \n",
+      " 6   area           3009 non-null   float64       \n",
+      " 7   is_studio      3009 non-null   bool          \n",
+      " 8   is_apartment   3009 non-null   bool          \n",
+      " 9   is_part        3009 non-null   bool          \n",
+      " 10  is_auction     3009 non-null   bool          \n",
+      " 11  is_openspace   3009 non-null   bool          \n",
+      " 12  is_roof        3009 non-null   bool          \n",
+      " 13  is_SNT         3009 non-null   bool          \n",
+      " 14  price          3009 non-null   int64         \n",
+      " 15  priceM         3009 non-null   float64       \n",
+      " 16  is_last_floor  3009 non-null   bool          \n",
+      " 17  cian_url       3009 non-null   object        \n",
+      " 18  description    3009 non-null   object        \n",
+      " 19  cian_page      3009 non-null   int64         \n",
+      " 20  ts             3009 non-null   datetime64[ns]\n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(5), object(5)\n",
-      "memory usage: 164.5+ KB\n"
+      "memory usage: 329.2+ KB\n"
      ]
     }
    ],
@@ -469,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18495\n"
+      "20463\n"
      ]
     }
    ],
@@ -497,21 +499,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-08 15:39:50 | LocationUpdater: 2703 addresses in location table\n",
-      "[INFO    ] 2022-09-08 15:39:50 | LocationUpdater: 2745 addresses total\n",
-      "[INFO    ] 2022-09-08 15:39:50 | LocationUpdater: 2703 addresses defined\n",
-      "[INFO    ] 2022-09-08 15:39:50 | LocationUpdater: 42 addresses undefined\n"
+      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3149 addresses in location table\n",
+      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3281 addresses total\n",
+      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3149 addresses defined\n",
+      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 132 addresses undefined\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2dfc6a9b217424ba7a46797184c081a",
+       "model_id": "5e9de32512cb4b29b98a26f4c419deb3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/42 [00:00<?, ?it/s]"
+       "  0%|          | 0/132 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -521,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-08 15:40:39 | LocationUpdater: 0 new addresses found\n"
+      "[INFO    ] 2022-09-12 14:18:49 | LocationUpdater: 89 new addresses found\n"
      ]
     }
    ],
@@ -573,23 +575,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1420</th>\n",
-       "      <td>улица Челюскинцев, 27</td>\n",
-       "      <td>44.63</td>\n",
-       "      <td>33.54</td>\n",
+       "      <th>737</th>\n",
+       "      <td>улица Вакуленчука, 5</td>\n",
+       "      <td>44.59</td>\n",
+       "      <td>33.48</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>579</th>\n",
-       "      <td>улица Героев Бреста, 44В</td>\n",
-       "      <td>44.59</td>\n",
-       "      <td>33.45</td>\n",
+       "      <th>2389</th>\n",
+       "      <td>Севастополь, район Ленинский, микрорайон Острякова, улица Николая Музыки, 36</td>\n",
+       "      <td>44.56</td>\n",
+       "      <td>33.53</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2685</th>\n",
-       "      <td>Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к2</td>\n",
-       "      <td>44.50</td>\n",
+       "      <th>2113</th>\n",
+       "      <td>Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к4</td>\n",
+       "      <td>44.51</td>\n",
        "      <td>33.49</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -598,15 +600,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                               adr  latitude  \\\n",
-       "1420                                         улица Челюскинцев, 27     44.63   \n",
-       "579                                       улица Героев Бреста, 44В     44.59   \n",
-       "2685  Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к2     44.50   \n",
+       "                                                                               adr  \\\n",
+       "737                                                           улица Вакуленчука, 5   \n",
+       "2389  Севастополь, район Ленинский, микрорайон Острякова, улица Николая Музыки, 36   \n",
+       "2113                  Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к4   \n",
        "\n",
-       "      longitude truncated  \n",
-       "1420      33.54     False  \n",
-       "579       33.45      True  \n",
-       "2685      33.49     False  "
+       "      latitude  longitude truncated  \n",
+       "737      44.59      33.48     False  \n",
+       "2389     44.56      33.53      True  \n",
+       "2113     44.51      33.49     False  "
       ]
      },
      "execution_count": 22,
@@ -647,8 +649,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "всего записей: 18495\n",
-      "записей без геометки: 957\n"
+      "всего записей: 20463\n",
+      "записей без геометки: 988\n"
      ]
     }
    ],
@@ -681,37 +683,37 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 18495 entries, 0 to 18494\n",
+      "Int64Index: 20463 entries, 0 to 20462\n",
       "Data columns (total 25 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   avito_id       16992 non-null  float64       \n",
-      " 1   title          18495 non-null  object        \n",
-      " 2   price          18495 non-null  int64         \n",
-      " 3   adr            18495 non-null  object        \n",
-      " 4   description    18495 non-null  object        \n",
-      " 5   obj_name       18495 non-null  object        \n",
-      " 6   ts             18495 non-null  datetime64[ns]\n",
-      " 7   avito_page     16992 non-null  float64       \n",
-      " 8   nrooms         18495 non-null  int64         \n",
-      " 9   floor          18495 non-null  int64         \n",
-      " 10  nfloors        18495 non-null  int64         \n",
-      " 11  area           18495 non-null  float64       \n",
-      " 12  is_studio      18495 non-null  bool          \n",
-      " 13  is_apartment   18495 non-null  bool          \n",
-      " 14  is_part        18495 non-null  bool          \n",
-      " 15  is_auction     18495 non-null  bool          \n",
-      " 16  is_openspace   18495 non-null  bool          \n",
-      " 17  is_roof        18495 non-null  bool          \n",
-      " 18  is_SNT         18495 non-null  bool          \n",
-      " 19  priceM         18495 non-null  float64       \n",
-      " 20  is_last_floor  18495 non-null  bool          \n",
-      " 21  cian_url       1503 non-null   object        \n",
-      " 22  cian_page      1503 non-null   float64       \n",
-      " 23  latitude       17538 non-null  float64       \n",
-      " 24  longitude      17538 non-null  float64       \n",
+      " 0   avito_id       17454 non-null  float64       \n",
+      " 1   title          20463 non-null  object        \n",
+      " 2   price          20463 non-null  int64         \n",
+      " 3   adr            20463 non-null  object        \n",
+      " 4   description    20463 non-null  object        \n",
+      " 5   obj_name       20463 non-null  object        \n",
+      " 6   ts             20463 non-null  datetime64[ns]\n",
+      " 7   avito_page     17454 non-null  float64       \n",
+      " 8   nrooms         20463 non-null  int64         \n",
+      " 9   floor          20463 non-null  int64         \n",
+      " 10  nfloors        20463 non-null  int64         \n",
+      " 11  area           20463 non-null  float64       \n",
+      " 12  is_studio      20463 non-null  bool          \n",
+      " 13  is_apartment   20463 non-null  bool          \n",
+      " 14  is_part        20463 non-null  bool          \n",
+      " 15  is_auction     20463 non-null  bool          \n",
+      " 16  is_openspace   20463 non-null  bool          \n",
+      " 17  is_roof        20463 non-null  bool          \n",
+      " 18  is_SNT         20463 non-null  bool          \n",
+      " 19  priceM         20463 non-null  float64       \n",
+      " 20  is_last_floor  20463 non-null  bool          \n",
+      " 21  cian_url       3009 non-null   object        \n",
+      " 22  cian_page      3009 non-null   float64       \n",
+      " 23  latitude       19475 non-null  float64       \n",
+      " 24  longitude      19475 non-null  float64       \n",
       "dtypes: bool(8), datetime64[ns](1), float64(7), int64(4), object(5)\n",
-      "memory usage: 2.7+ MB\n"
+      "memory usage: 3.0+ MB\n"
      ]
     }
    ],
