--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -115,97 +115,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-08 13:30:29 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-08 13:30:29 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-08 13:30:32 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-08 13:30:32 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-08 13:30:38 | AvitoParser: 80 pages for read\n",
-      "[INFO    ] 2022-09-08 13:30:38 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-08 13:30:40 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-08 13:30:44 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-08 13:30:47 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-08 13:30:51 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-08 13:30:54 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-08 13:30:57 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-08 13:31:01 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-08 13:31:04 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-08 13:31:07 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-08 13:31:11 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-08 13:31:14 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-08 13:31:17 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-08 13:31:24 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-08 13:31:28 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-08 13:31:33 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-08 13:31:36 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-08 13:31:39 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-08 13:31:43 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-08 13:31:47 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-08 13:31:50 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-08 13:31:55 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-08 13:31:58 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-08 13:32:02 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-08 13:32:07 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-09-08 13:32:10 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-09-08 13:32:14 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-09-08 13:32:16 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-09-08 13:32:19 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-09-08 13:32:22 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-09-08 13:32:25 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-09-08 13:32:28 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-09-08 13:32:31 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-09-08 13:32:34 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-09-08 13:32:38 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-09-08 13:32:42 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-09-08 13:32:46 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-09-08 13:32:49 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-09-08 13:32:52 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-09-08 13:32:55 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-09-08 13:32:58 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-09-08 13:33:00 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-09-08 13:33:03 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-09-08 13:33:07 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-09-08 13:33:09 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-09-08 13:33:12 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-09-08 13:33:15 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-09-08 13:33:20 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-09-08 13:33:24 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-09-08 13:33:55 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-09-08 13:33:58 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-09-08 13:34:01 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-09-08 13:34:04 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-09-08 13:34:08 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-09-08 13:34:11 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-09-08 13:34:14 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-09-08 13:34:16 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-09-08 13:34:19 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-09-08 13:34:24 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-09-08 13:34:54 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-09-08 13:34:58 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-09-08 13:35:01 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-09-08 13:35:05 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-09-08 13:35:08 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-09-08 13:35:11 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-09-08 13:35:14 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-09-08 13:35:18 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-09-08 13:35:22 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-09-08 13:35:25 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-09-08 13:35:28 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-09-08 13:35:31 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-09-08 13:35:34 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-09-08 13:35:38 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-09-08 13:35:40 | AdsListParser: read page 73\n",
-      "[INFO    ] 2022-09-08 13:35:43 | AdsListParser: read page 74\n",
-      "[INFO    ] 2022-09-08 13:35:50 | AdsListParser: read page 75\n",
-      "[INFO    ] 2022-09-08 13:35:54 | AdsListParser: read page 76\n",
-      "[INFO    ] 2022-09-08 13:35:57 | AdsListParser: read page 77\n",
-      "[INFO    ] 2022-09-08 13:36:00 | AdsListParser: read page 78\n",
-      "[INFO    ] 2022-09-08 13:36:03 | AdsListParser: read page 79\n",
-      "[INFO    ] 2022-09-08 13:36:05 | AdsListParser: read page 80\n",
-      "[INFO    ] 2022-09-08 13:36:05 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-08 13:36:06 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3982\n",
-      "CPU times: user 17.1 s, sys: 820 ms, total: 18 s\n",
-      "Wall time: 5min 36s\n"
+      "[INFO    ] 2022-09-12 13:39:36 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-12 13:39:36 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-12 13:39:39 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-12 13:39:39 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-12 13:39:45 | AvitoParser: 74 pages for read\n",
+      "[INFO    ] 2022-09-12 13:39:45 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-12 13:39:48 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-12 13:39:52 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-12 13:39:56 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-12 13:39:59 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-12 13:40:03 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-12 13:40:07 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-12 13:40:11 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-12 13:40:15 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-12 13:40:19 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-12 13:40:23 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-12 13:40:26 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-12 13:40:30 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-12 13:40:33 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-12 13:40:36 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-12 13:40:40 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-12 13:40:46 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-12 13:40:53 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-12 13:40:59 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-12 13:41:03 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-12 13:41:07 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-12 13:41:10 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-12 13:41:14 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-12 13:41:18 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-12 13:41:22 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-09-12 13:41:27 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-09-12 13:41:32 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-09-12 13:41:38 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-09-12 13:41:43 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-09-12 13:41:47 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-09-12 13:41:51 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-09-12 13:41:55 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-09-12 13:42:00 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-09-12 13:42:03 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-09-12 13:42:07 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-09-12 13:42:10 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-09-12 13:42:14 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-09-12 13:42:18 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-09-12 13:42:23 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-09-12 13:42:27 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-09-12 13:42:30 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-09-12 13:42:35 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-09-12 13:42:39 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-09-12 13:42:43 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-09-12 13:42:47 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-09-12 13:42:50 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-09-12 13:42:54 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-09-12 13:42:58 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-09-12 13:43:02 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-09-12 13:43:07 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-09-12 13:43:11 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-09-12 13:43:15 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-09-12 13:43:19 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-09-12 13:43:24 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-09-12 13:43:28 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-09-12 13:43:32 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-09-12 13:43:36 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-09-12 13:43:40 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-09-12 13:43:44 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-09-12 13:43:47 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-09-12 13:43:51 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-09-12 13:43:55 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-09-12 13:43:59 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-09-12 13:44:02 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-09-12 13:44:08 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-09-12 13:44:13 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-09-12 13:44:17 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-09-12 13:44:21 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-09-12 13:44:25 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-09-12 13:44:28 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-09-12 13:44:33 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-09-12 13:44:37 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-09-12 13:44:40 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-09-12 13:44:45 | AdsListParser: read page 73\n",
+      "[INFO    ] 2022-09-12 13:44:49 | AdsListParser: read page 74\n",
+      "[INFO    ] 2022-09-12 13:44:49 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-12 13:44:49 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3682\n",
+      "CPU times: user 16.6 s, sys: 1.06 s, total: 17.6 s\n",
+      "Wall time: 5min 13s\n"
      ]
     }
    ],
@@ -225,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f8bd78d3",
    "metadata": {},
    "outputs": [
@@ -233,8 +227,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3982\n",
-      "3270\n"
+      "3682\n",
+      "3106\n"
      ]
     }
    ],
@@ -246,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6fa322a2",
    "metadata": {},
    "outputs": [],
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "bcd426ee",
    "metadata": {},
    "outputs": [
@@ -295,54 +289,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1455</th>\n",
-       "      <td>2482017748</td>\n",
-       "      <td>Объявление «2-к. квартира, 50 м², 1/3 эт.» 11 фотографий</td>\n",
-       "      <td>6199000</td>\n",
+       "      <th>677</th>\n",
+       "      <td>2161799926</td>\n",
+       "      <td>Объявление «1-к. квартира, 29 м², 1/2 эт.» 22 фотографии</td>\n",
+       "      <td>4600000</td>\n",
        "      <td></td>\n",
-       "      <td>Нахимовский муниципальный округ, посёлок Любимовка, ул. Софьи Перовской, 45</td>\n",
-       "      <td>Продаётся двухкомнатная квартира на первом этаже трехэтажного дома в тихом, спальном, курортном районе. Квартира пустая, требует ремонта. Окна металлопластиковые, поменяно отопление (трубы и батареи), проведен газ, имеется отдельное подсобное помещение. Ес</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2022-09-08 13:36:05.789208</td>\n",
+       "      <td>ул. Коли Пищенко, 20А</td>\n",
+       "      <td>Цена снижена! Нашли встречку. Однокомнатная сталинка с хорошим ремонтом с большой придомовой территорией своей для отдыха. \\nВ зеленом районе со всей инфраструктурой. \\nПоликлиники, школы, сады, рынок, ТЦ, спортшкола, детский парк «Лукоморье», все в шaгoвой</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2022-09-12 13:44:49.319330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>2372604864</td>\n",
-       "      <td>Объявление «1-к. квартира, 59 м², 3/3 эт.» 6 фотографий</td>\n",
-       "      <td>14245371</td>\n",
-       "      <td>ЖК «Голубая Бухта»</td>\n",
-       "      <td>аллея Защитников 35-й Батареи, д. 11а</td>\n",
-       "      <td>ЖК «Голубая Бухта» — это неповторимое сочетание современной архитектуры и комфортной жизни с удобным расположением у самого берега Черного моря и живописным видом на Голубую бухту. \\nКомплекс имеет уникальную инфраструктуру:300м до пляжа «Голубая бухта», Sp</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-09-08 13:36:05.789208</td>\n",
+       "      <th>2849</th>\n",
+       "      <td>2352506541</td>\n",
+       "      <td>Объявление «1-к. квартира, 40,1 м², 6/9 эт.» 7 фотографий</td>\n",
+       "      <td>9900000</td>\n",
+       "      <td></td>\n",
+       "      <td>Античный пр-т, 5</td>\n",
+       "      <td>Арт. 19590900 Продам квартиру в новом доме по адресу: г Севастополь ул. Проспект Античный 5 в ЖК «Легенда».\\n\\nВ непосредственной близости от дома расположено всё необходимое для комфортной жизни: ТЦ Апельсин, магазины с товарами первой необходимости, 2 новы</td>\n",
+       "      <td>69</td>\n",
+       "      <td>2022-09-12 13:44:49.319330</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                     title  \\\n",
-       "1455  2482017748  Объявление «2-к. квартира, 50 м², 1/3 эт.» 11 фотографий   \n",
-       "39    2372604864   Объявление «1-к. квартира, 59 м², 3/3 эт.» 6 фотографий   \n",
+       "        avito_id                                                      title  \\\n",
+       "677   2161799926   Объявление «1-к. квартира, 29 м², 1/2 эт.» 22 фотографии   \n",
+       "2849  2352506541  Объявление «1-к. квартира, 40,1 м², 6/9 эт.» 7 фотографий   \n",
        "\n",
-       "         price            obj_name  \\\n",
-       "1455   6199000                       \n",
-       "39    14245371  ЖК «Голубая Бухта»   \n",
+       "        price obj_name                    adr  \\\n",
+       "677   4600000           ул. Коли Пищенко, 20А   \n",
+       "2849  9900000                Античный пр-т, 5   \n",
        "\n",
-       "                                                                              adr  \\\n",
-       "1455  Нахимовский муниципальный округ, посёлок Любимовка, ул. Софьи Перовской, 45   \n",
-       "39                                          аллея Защитников 35-й Батареи, д. 11а   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                            description  \\\n",
-       "1455   Продаётся двухкомнатная квартира на первом этаже трехэтажного дома в тихом, спальном, курортном районе. Квартира пустая, требует ремонта. Окна металлопластиковые, поменяно отопление (трубы и батареи), проведен газ, имеется отдельное подсобное помещение. Ес   \n",
-       "39    ЖК «Голубая Бухта» — это неповторимое сочетание современной архитектуры и комфортной жизни с удобным расположением у самого берега Черного моря и живописным видом на Голубую бухту. \\nКомплекс имеет уникальную инфраструктуру:300м до пляжа «Голубая бухта», Sp   \n",
+       "                                                                                                                                                                                                                                                             description  \\\n",
+       "677   Цена снижена! Нашли встречку. Однокомнатная сталинка с хорошим ремонтом с большой придомовой территорией своей для отдыха. \\nВ зеленом районе со всей инфраструктурой. \\nПоликлиники, школы, сады, рынок, ТЦ, спортшкола, детский парк «Лукоморье», все в шaгoвой    \n",
+       "2849  Арт. 19590900 Продам квартиру в новом доме по адресу: г Севастополь ул. Проспект Античный 5 в ЖК «Легенда».\\n\\nВ непосредственной близости от дома расположено всё необходимое для комфортной жизни: ТЦ Апельсин, магазины с товарами первой необходимости, 2 новы   \n",
        "\n",
        "      page                         ts  \n",
-       "1455    38 2022-09-08 13:36:05.789208  \n",
-       "39       1 2022-09-08 13:36:05.789208  "
+       "677     17 2022-09-12 13:44:49.319330  \n",
+       "2849    69 2022-09-12 13:44:49.319330  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
